Issue #7 Implement Documentation
First draft of regfmt documentation

- Usage
- Examples
- YAML Specification
- CSS Specification

--- a/tests/data/github.css
+++ b/tests/data/github.css
@@ -20,9 +20,13 @@ register-name {
 }
 
 field-name {
-    fill: black;
+    fill: teal;
 }
 
 field-index {
     fill: darkslategrey;
+}
+
+field-name-line: {
+    stroke: purple;
 }
