--- a/tests/data/github.css
+++ b/tests/data/github.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    font-family: Futura, Helvetica, Arial, Verdana;
+    font-family: Futura, Helvetica, Arial, Verdana, FreeSans;
     font-size: 12pt;
     font-style: normal;
     font-weight: normal;
